Fix post list date & title overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ em, i { font-style: italic; }
 #post-list h2 {
 	font: normal 17px/1.5em "Helvetica Neue",Helvetica,Arial,sans-serif;
 	color: #aaa;
-	max-width: 400px;
+	/*max-width: 400px;*/
 	margin-top: 2px;
 }
 
@@ -396,6 +396,7 @@ Post List
 	top: 1px;
 	font: 300 17px/1.8 "Helvetica Neue",helvetica,Arial,sans-serif;
 	color: #bbb;
+	padding-left: 10px;
 }
 
 #post-list-footer {
